# kitty-api

./: .gitignore  convert.py  create_mock_data.py  main.py  pyproject.toml  settings.py  utils.py
app/admin/: admin.py  app.py  enums.py  inline.py  main.py  mixins.py  providers.py  resources.py  router.py
app/admin/templates/: dashboard.html
app/maps/: dependencies.py  models.py  router.py  schemas.py  services.py
app/play/: manager.py  router.py  schemas.py  service.py  test_websocket.html  websocket.py
app/records/: model.py  models.py  redis_services.py  router.py  schemas.py  services.py
app/records/pp/: calculate_pp.py  total_pp.py
app/user/: model.py  models.py  router.py
app/user/schemas/: token.py  user.py
app/user/service/: auth.py  token.py  user.py
config/: base.py  local.py
migrations/models/: 0_20260123012320_init.py  0_20260129141230_init.py  0_20260131064202_init.py  0_20260204220447_init.py  1_20260113152611_None.py  1_20260123012613_update.py  1_20260129142028_url.py  1_20260202164635_update.py  2_20260114143725_update.py  2_20260123142120_update.py  2_20260129183913_update.py  3_20260114153439_update.py  3_20260123151004_update.py  3_20260129224402_update.py  4_20260119171855_update.py  4_20260123222032_update.py  5_20260120225748_update.py  5_20260203063539_update.py  6_20260122045448_update.py  6_20260204192209_update.py
